# cdf-bootcamp

./: pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: admin.readonly.group.yaml  admin.readwrite.group.yaml  data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/extraction_pipelines/: ep_icapi_assets.yaml  ep_icapi_datapoints.yaml  ep_icapi_timeseries.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.yaml  icapi_ts_assets_contextualization.schedule.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
